// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container [Profiler] - reducers should handle loadProfileFailure correctly 1`] = `
Immutable.Map {
  "loading": false,
  "results": Immutable.List [],
  "elements": Immutable.Map {},
}
`;

exports[`Container [Profiler] - reducers should handle the addProfilerElement action correctly 1`] = `
Immutable.Map {
  "loading": false,
  "results": Immutable.List [],
  "elements": Immutable.Map {
    "fcf1d884-ed6e-4378-bafc-8a9948cf69c5": Immutable.Map {
      "nutrient": Object {
        "className": "elements-carbohydrates",
        "label": "Carbohydrates",
        "value": "CHOCDF",
      },
      "scale": 50,
    },
  },
}
`;

exports[`Container [Profiler] - reducers should handle the changeSearch action correctly 1`] = `
Immutable.Map {
  "loading": true,
  "results": Immutable.List [],
  "elements": Immutable.Map {},
}
`;

exports[`Container [Profiler] - reducers should handle the deleteProfilerElement action correctly 1`] = `
Immutable.Map {
  "loading": false,
  "results": Immutable.List [],
  "elements": Immutable.Map {},
}
`;

exports[`Container [Profiler] - reducers should handle the loadProfileSuccess action correctly 1`] = `
Immutable.Map {
  "loading": false,
  "results": Immutable.List [],
  "elements": Immutable.Map {},
}
`;

exports[`Container [Profiler] - reducers should handle the searchComplete action correctly 1`] = `
Immutable.Map {
  "loading": false,
  "results": Object {
    "hits": 1,
    "items": Array [
      Object {
        "_id": "AWF8pHZ9bw9zRJtz161q",
        "_index": "nutry-names",
        "_score": 10,
        "_source": Object {
          "SN": "02049",
          "alias": Array [],
          "allergen": Array [],
          "group": "Spices and Herbs",
          "name": "Fresh thyme",
          "nutrients": Object {},
          "portions": Array [],
          "tags": Array [],
          "usage": Array [],
        },
      },
    ],
    "max_score": 10,
  },
  "elements": Immutable.Map {},
}
`;

exports[`Container [Profiler] - reducers should handle the updateProfilerElement action correctly 1`] = `
Immutable.Map {
  "loading": false,
  "results": Immutable.List [],
  "elements": Immutable.Map {
    "uuid": Immutable.Map {
      undefined: undefined,
    },
  },
}
`;

exports[`Container [Profiler] - reducers should return the initial state 1`] = `
Immutable.Map {
  "loading": false,
  "results": Immutable.List [],
  "elements": Immutable.Map {},
}
`;
